[package]
name = "test-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
tokio-tungstenite = "0.26.2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13.2", features = ["json"] }
