[package]
name = "payment-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
switch-core = { path = "../switch-core" }
edge-ingress = { path = "../edge-ingress" }
edge-egress = { path = "../edge-egress" }
payment-proto = { path = "../payment-proto" }
hsm-client = { path = "../hsm-client" }
sled = "0.34.7"
axum = "0.7.3"
tower-http = { version = "0.5.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
prost = "0.12"
dashmap = "5.5.3"
memmap2 = "0.9.3"
arc-swap = "1.6"
bytes = "1"
