[package]
name = "payment-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
tonic = "0.10"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.0", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
tonic-build = "0.10"
