[package]
name = "switch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
memmap2 = "0.9"
thiserror = "1.0"
prost = "0.12"
payment-proto = { path = "../payment-proto" }
dashmap = "5.5"
num_cpus = "1.16"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros", "time", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
hsm-client = { path = "../hsm-client" }
sled = "0.34"
bytes = "1.0"
csv = "1.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1.6"
rusqlite = { version = "0.29", features = ["bundled"] }
tokio-cron-scheduler = "0.10"
